--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -3,3 +3,9 @@
 <link rel="stylesheet" type="text/css" href="{% static 'masterquest/style.css' %}">
 
 <h1>Master Quest</h1>
+
+<p>Welcome! Click below to enter!</p>
+
+<p>
+    <img src="" />    
+</p>
