--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -1,11 +1,18 @@
 {% load static %}
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 <link rel="stylesheet" type="text/css" href="{% static 'masterquest/style.css' %}">
 
 <h1>Master Quest</h1>
 
+<h2>Interpretability of decision tree-based detections.</h2>
+
 <p>Welcome! Click below to enter!</p>
 
 <p>
-    <img src="" />    
+    <a href="newparticipant/" title="Enter"><img src="http://pluspng.com/img-png/enter-png-similar-enter-png-image-200.png" alt="Enter PNG"></a>
 </p>
