--- a/questionnaire/templates/masterquest/participant.html
+++ b/questionnaire/templates/masterquest/participant.html
@@ -1,4 +1,4 @@
-<form action="{% url 'newparticipant'}" method="POST">
+<form action="{% url 'newparticipant' %}" method="POST">
     {% csrf_token %}
     {{form}}
     <input type="submit" />
