--- a/questionnaire/static/masterquest/style.css
+++ b/questionnaire/static/masterquest/style.css
@@ -1,3 +1,63 @@
-li a {
-    color: green;
+body{
+    background-image: url("images/grey.jpg");
 }
+
+#header{    
+    color: darkred;
+    height: 120px;
+    font-weight: bold;
+    
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+
+    align-items: center;
+
+    background-image: url("images/grey.jpg");
+    margin-bottom: 20px;   
+}
+
+#header img{    
+    height: 100%; 
+    float: left;    
+}
+
+#headerheader{     
+    padding-left: 30px;   
+ 
+}
+
+#headerheader p{
+    margin: 0px;    
+}
+
+.container{
+    border: 1px solid;
+    border-color: lightgray;
+    /* Safari 3-4, iOS 1-3.2, Android 1.6- */
+    -webkit-border-radius: 12px; 
+    /* Firefox 1-3.6 */
+    -moz-border-radius: 12px; 
+    border-radius: 10px;    
+    background: white;    
+
+    padding-bottom: 30px;    
+}
+
+.container h1{
+    border-bottom: 1px solid lightgrey; 
+    margin-bottom: 30px;   
+    color: grey;
+}
+
+#research-title{
+    margin-bottom: 30px;
+}
+
+
+
+
