--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -1,10 +1,14 @@
-<h1>Task 1</h1>
 {% load static %}
+{% extends "masterQuest/base.html" %}
+
+{% block content %}
+
+<h1>Task 1</h1>
 
 <img src="{% get_static_prefix %}masterquest/images/gc.png" />
-
-
 
 <h2>Question n. 1</h2>
 <h2>Question n. 2</h2>
 <h2>Question n. 3</h2>
+
+{% endblock content %}
