desenvolvendo a tela de survey

--- a/questionnaire/templates/masterquest/header.html
+++ b/questionnaire/templates/masterquest/header.html
@@ -2,6 +2,6 @@
 <img src="{% static 'masterquest/images/ufal.png' %}" />
 <div id="headerheader">
     <p>Universidade Federal de Alagoas</p>
-    <p>Instituto de Computação</p>
-    <p>PPGI - Programa de Pós Graduação em Informática</p>
+    <p>Instituto de Computa&ccedil;&atilde;o</p>
+    <p>PPGI - Programa de P&oacute;s Gradua&ccedil;&atilde;o em Inform&aacute;tica</p>
 </div>
