--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -1,7 +1,7 @@
 {% extends "masterQuest/base.html" %}
 
 {% block content %}
-    <h1>Master Quest</h1>
+    <h1>Welcome</h1>
 
     <h2 id="research-title">Research - Code Smell Detection: Interpretability of decision tree-based detections.</h2>
 
@@ -10,8 +10,8 @@
     </div>
     
     <div id="members">
-        <p>Ms Student: Christiano Rossini</p>
-        <p>Advisor: Baldoino Fonseca</p>
+        <p><strong>Ms Student:</strong> Christiano Rossini (christianorossini@ic.ufal.br)</p>
+        <p><strong>Advisor:</strong> Baldoino Fonseca</p>
     </div>
     
     <p>Welcome! Click below to enter!</p>
@@ -19,6 +19,6 @@
     
     
     <p style="text-align: center;">        
-        <a href="newparticipant/" title="Enter" class="btn btn-primary btn-lg" href="#" role="button">Go to survey</a>    
+        <a href="newparticipant/" title="Enter" class="btn btn-primary btn-lg" role="button">Go to survey</a>    
     </p>
 {% endblock %}
