--- a/questionnaire/static/masterquest/style.css
+++ b/questionnaire/static/masterquest/style.css
@@ -34,7 +34,7 @@ body{
     margin: 0px;    
 }
 
-.container{
+#content.container{
     border: 1px solid;
     border-color: lightgray;
     /* Safari 3-4, iOS 1-3.2, Android 1.6- */
@@ -57,6 +57,14 @@ body{
     margin-bottom: 30px;
 }
 
+#gridModelSnippets{
+    text-align:center;    
+    margin-bottom: 30px;
+}
+
+#gridModelSnippets img:hover{
+    cursor: pointer;
+}
 
 
 
