--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -5,11 +5,86 @@
 
 <h1>Analyse Model #</h1>
 
-<img src="{% get_static_prefix %}masterquest/images/{{dtModel.imgPath}}" class="img-thumbnail rounded"/>
+<div class="container" id="gridModelSnippets">
+    <div class="row">
+        <div class="col-sm">            
+            <img src="{% get_static_prefix %}masterquest/images/dtree.png" data-toggle="modal" data-target="#dtModelModal"/>       
+        </div>        
+        <div class="col-sm">
+            <span style="display: block;">Code snippet 1</span>
+            <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs1"/>
+        </div>    
+        <div class="col-sm">
+            <span style="display: block;">Code snippet 2</span>
+            <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs2"/>
+        </div>
+    </div>
+</div>
 
 <h2 class="tasktitle">Task 1: {{task.name}}</h2>
 <h3 class="questionDesc">Question n. 1</h3>
 <h3 class="questionDesc">Question n. 2</h3>
 <h3 class="questionDesc">Question n. 3</h3>
+      
+<!-- Modal -->
+<div class="modal fade" id="dtModelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">DT Model</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <img src="{% get_static_prefix %}masterquest/images/{{dtModel.imgPath}}" class="img-thumbnail rounded" data-toggle="modal" data-target="#dtModelModal"/>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>              
+        </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="cs1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Code Snippet</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+            
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>              
+            </div>
+            </div>
+        </div>
+    </div>
+
+<!-- Modal -->
+<div class="modal fade" id="cs2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Code Snippet</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+            
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>              
+            </div>
+            </div>
+        </div>
+    </div>
+
 
 {% endblock content %}
