--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Welcome</h1>
 
-    <h2 id="research-title">Research - Code Smell Detection: Interpretability of decision tree-based detections.</h2>
+    <h2 id="research-title">Research - Code Smell Detection: assessing interpretability of decision tree-based detections.</h2>
 
     <div>
             {% lorem 3 p %}
