--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -3,61 +3,129 @@
 
 {% block content %}
 
-<h1>Analyse Model #</h1>
+<script>   
+    $(document).ready(function() {
+        $('.btnStartTask').click(function() {
+            $('.btnStartTask').attr("disabled","disabled");
+            $('#gridModelSnippets').show();
+            $('.quest0Content').css('display','block');            
+        });
 
-<div class="container" id="gridModelSnippets">
-    <div class="row">
-        <div class="col-sm">            
-            <img src="{% get_static_prefix %}masterquest/images/dtree.png" data-toggle="modal" data-target="#dtModelModal"/>       
-        </div>        
-        <div class="col-sm">
-            <span style="display: block;">Code snippet 1</span>
-            <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs1"/>
-        </div>    
-        <div class="col-sm">
-            <span style="display: block;">Code snippet 2</span>
-            <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs2"/>
-        </div>
-    </div>
-</div>
+        $('.btnStartQuest1').click(function() {
+            $('.btnStartQuest1').attr("disabled","disabled");
+            $('.quest1Content').css('display','block')
+        });
+
+        $('.btnStartQuest2').click(function() {
+            $('.btnStartQuest2').attr("disabled","disabled");
+            $('.quest2Content').css('display','block')
+        });
+    });
+</script>
+
+
+<h1>3 - Analyse Model #13213</h1>
+
+{% if task.shortName == task.CLASSIFICATION_TASK %}
 
 <h2 class="tasktitle">Task 1: {{task.name}}</h2>
-<h3 class="questionDesc">Question n. 1</h3>
-<h3 class="questionDesc">Question n. 2</h3>
-<h3 class="questionDesc">Question n. 3</h3>
+<button type="button" class="btn btn-primary btnStartTask">Start solving</button>
+
+<div class="taskContent">
+   
+    <div class="container" id="gridModelSnippets" onclick="" style="display: none">
+        <div class="row">
+            <div class="col-sm">            
+                <a href="{% get_static_prefix %}masterquest/images/{{dtModel.imgPath}}" target="_blank">
+                    <!--<img src="{% get_static_prefix %}masterquest/images/dtree.png" data-toggle="modal" data-target="#dtModelModal"/>      --> 
+                    <img src="{% get_static_prefix %}masterquest/images/dtree.png"/>
+                </a>
+            </div>        
+            <div class="col-sm">
+                <span style="display: block;">Code snippet 1</span>
+                <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs1"/>
+            </div>    
+            <div class="col-sm">
+                <span style="display: block;">Code snippet 2</span>
+                <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs2"/>
+            </div>
+        </div>
+    </div>
+    
+    <form action="" method="POST">      
+        <div class="quest0Content questContent">
+            <h3 class="questionDesc">Q. {{questions.0.sequenceNumber}} - {{questions.0.description}}</h3>             
+            <p>
+                <strong>CountLine=60 and MaxNesting > 5.8 and CountLineCodeExe=29 and RatioCommentToCode=0.06 and CountPath=9 and CountLineBlank=2 </strong>
+            </p>
+            <div class="input-group mb-3">                
+                {{questions.0.getForm}}
+                <div class="input-group-append">
+                    <button type="button" class="btn btn-primary btnStartQuest1">Apply answer</button>
+                </div>
+            </div>                                       
+        </div>    
+
+        <div class="quest1Content questContent">
+            <h3 class="questionDesc">Q. {{questions.1.sequenceNumber}} - {{questions.1.description}}</h3>                     
+            <div class="input-group mb-3">    
+                {{questions.1.getForm}}            
+                <div class="input-group-append">
+                    <button type="button" class="btn btn-primary btnStartQuest2">Apply answer</button>
+                </div>
+            </div>            
+        </div>    
+
+        <div class="quest2Content questContent">
+            <h3 class="questionDesc">Q. {{questions.2.sequenceNumber}} - {{questions.2.description}}</h3>    
+            
+                {{questions.2.getForm}}
+            <input type="submit" value="Next Task" class="btn btn-primary" />
+            
+        </div>
+    </form>
+    
+</div>
+{% endif %}
+
+
       
 <!-- Modal -->
-<div class="modal fade" id="dtModelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!--<div class="modal fade" id="dtModelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">DT Model</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="modal-body">
-            <img src="{% get_static_prefix %}masterquest/images/{{dtModel.imgPath}}" class="img-thumbnail rounded" data-toggle="modal" data-target="#dtModelModal"/>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>              
-        </div>
+        <div class="modal-content" >
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">DT Model</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <img src="{% get_static_prefix %}masterquest/images/{{dtModel.imgPath}}" />
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>              
+            </div>
         </div>
     </div>
 </div>
+-->
+
 
 <!-- Modal -->
 <div class="modal fade" id="cs1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Code Snippet</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Code Snippet 1</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-            
+                <pre><code>
+                    {{dtModel.codeSnippet1}}
+                </code></pre>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>              
@@ -71,13 +139,15 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Code Snippet</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Code Snippet 2</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-            
+                    <pre><code>
+                            {{dtModel.codeSnippet2}}
+                        </code></pre>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>              
