--- a/questionnaire/templates/masterquest/base.html
+++ b/questionnaire/templates/masterquest/base.html
@@ -16,7 +16,7 @@
 <body>
     
     <div id="header" class="container-fluid">
-        {% include "masterQuest/header.html" %}
+        {% include "masterquest/header.html" %}
     </div>
 
     <div id="content" class="container">
