--- a/questionnaire/templates/masterquest/surveyFinish.html
+++ b/questionnaire/templates/masterquest/surveyFinish.html
@@ -8,5 +8,9 @@
     Thanks for your help.
 </p>
 
+<p style="text-align: center;">        
+        <a href="/masterquest" title="Enter" class="btn btn-primary btn-lg" role="button">Go to home</a>    
+    </p>
+
 
 {% endblock content %}
