melhora nos templates

--- a/questionnaire/templates/masterquest/incModals.html
+++ b/questionnaire/templates/masterquest/incModals.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- Modal -->
 <!--<div class="modal fade" id="dtModelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
