--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -13,5 +13,8 @@
     {% endblock surveyContent %}
     </div>    
     
+    <!-- Modals -->
+    {% include "masterquest/incModals.html" %}
+    
 {% endblock content %}
 
