mudança do painel da decision tree / aumento dos campos do participante

--- a/questionnaire/templates/masterquest/participant.html
+++ b/questionnaire/templates/masterquest/participant.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1 class="stepTitle">1 - Set some informations</h1>
+    <h1 class="stepTitle">1 - Participant Background</h1>
     
     <fieldset>
         <form action="{% url 'newparticipant' %}" method="POST">
