--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -8,6 +8,17 @@
     <div>
             {% lorem 3 p %}
     </div>
+<!--
+    We refer to "Smells" as pieces of code that need to be improved. Examples of these code smells are Long Methods (method that is too long and tries to do too much) and God Class (classes that tend to centralize the intelligence of the system). By code smells harmfulness, we mean code smells that can degrade the software quality, e. g., bug-prone code smells. 
+
+The goal of this survey is to identify the perceptions of professionals regarding the harmfulness of code smells. 
+
+i. Participant Background (4 questions)
+ii. Code Smells Harmfulness (7 questions)
+iii. Additional Comments (2 questions)
+
+Answering the survey should take around 3 minutes of your time. All the data collected from the survey is anonymous. The results of the survey may be reported in academic publications. If you have any questions or concerns, please contact Rodrigo Lima <rsl@ic.ufal.br>.
+-->    
     
     <div id="members">
         <p><strong>Ms Student:</strong> Christiano Rossini (christianorossini@ic.ufal.br)</p>
